# axiom

./: .gitignore  LICENSE  README.md  axiom-overview-draft.md  dune-project
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
compiler/: dune-project
compiler/lib/: ast.ml  codegen_wasm.ml  dune  elaborate.ml  ir.ml  lexer.ml  parser.ml
compiler/test/: dune  test_suite.ml
docs/implementation/: node-encoding.md  node-store.md  status.md
examples/: 01_basics.axm  02_data_types.axm  03_effects.axm  04_state_machine.axm  05_collections.axm  06_string_processing.axm  07_validation.axm  08_config.axm  09_pipeline.axm  10_json.axm  README.md
lib/: BLAKE3_VENDORED.md  ast.ml  dune  lexer.ml  node_decoding.ml  node_encoding.ml  node_hash.ml  node_hash_stubs.c  node_store.ml  node_tag.ml  parser.ml  typechecker.ml
runtime/: build.zig  build.zig.zon
runtime/src/: effects.zig  gc.zig  root.zig
runtime/src/stdlib/: core.zig  io.zig
spec/: LICENSE-CC-BY-4.0  axiom-overview-draft.md
test/: dune  test_decl_parser.ml  test_lexer.ml  test_node_encoding.ml  test_node_store.ml  test_parser.ml  test_roundtrip.ml  test_typechecker.ml
tests/examples/: hello.axm
