(test
 (name test_lexer)
 (modules test_lexer)
 (libraries axiom_lib alcotest))

(test
 (name test_parser)
 (modules test_parser)
 (libraries axiom_lib alcotest))

(test
 (name test_typechecker)
 (modules test_typechecker)
 (libraries axiom_lib alcotest))

(test
 (name test_decl_parser)
 (modules test_decl_parser)
 (libraries axiom_lib alcotest))

(test
 (name test_node_encoding)
 (modules test_node_encoding)
 (libraries axiom_lib alcotest))
